--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     volumes:
       - ~/.cache/huggingface:/root/.cache/huggingface
     command: >
-      --model unsloth/Llama-3.2-11B-Vision-Instruct-bnb-4bit
+      --model ${VLLM_MODEL}
       --dtype half
       --quantization bitsandbytes
       --load_format bitsandbytes
